--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   	
   	<modelVersion>4.0.0</modelVersion>
   	<groupId>tr.com.serkanozal</groupId>
   	<artifactId>aws-tweet-crawler</artifactId>
   	<version>1.0</version>
+  	<packaging>jar</packaging>
     <name>AWS Tweet Crawler</name>
     <url>https://github.com/serkan-ozal/aws-tweet-crawler</url>
     
@@ -13,7 +16,7 @@
         
         <source.compiler.version>1.6</source.compiler.version>
         <target.compiler.version>1.6</target.compiler.version>
-        
+
         <maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
         <maven.resources.plugin.version>2.4</maven.resources.plugin.version>
         <maven.surefire.plugin.version>2.9</maven.surefire.plugin.version>
@@ -21,7 +24,26 @@
         <twitter4j.version>4.0.4</twitter4j.version>
         <aws.sdk.version>1.11.0</aws.sdk.version>
 		<log4j.version>1.2.17</log4j.version>
-        <junit.version>4.11</junit.version>
+
+        <mainApplication>tr.com.serkanozal.aws.tweetcrawler.TweetCrawler</mainApplication>
+        
+        <beanstalker.region>us-east-1</beanstalker.region>
+        <environmentName>${project.artifactId}</environmentName>
+        <beanstalk.applicationName>${project.artifactId}</beanstalk.applicationName>
+        <beanstalk.environmentName>${environmentName}</beanstalk.environmentName>
+        <beanstalk.cnamePrefix>${environmentName}</beanstalk.cnamePrefix>
+        <beanstalk.environmentRef>${environmentName}.elasticbeanstalk.com</beanstalk.environmentRef>
+        <beanstalk.versionLabel>${project.version}</beanstalk.versionLabel>
+        <beanstalk.mainJar>${project.build.finalName}.jar</beanstalk.mainJar>
+        <beanstalk.sourceBundle>${project.build.finalName}.zip</beanstalk.sourceBundle>
+        <beanstalk.artifactFile>${project.build.directory}/${beanstalk.sourceBundle}</beanstalk.artifactFile>
+        <beanstalk.s3Bucket>${project.groupId}</beanstalk.s3Bucket>
+        <beanstalk.s3Key>${project.artifactId}/${project.artifactId}-${project.version}-${beanstalk.versionLabel}.zip</beanstalk.s3Key>
+        <beanstalk.solutionStack>64bit Amazon Linux * running Java 7</beanstalk.solutionStack>
+        <beanstalk.keyName>sozal-aws</beanstalk.keyName>
+        <beanstalk.instanceType>t1.micro</beanstalk.instanceType>
+        <!-- Comment-out `environmentType` for enabling clustering by auto-scaling -->
+        <beanstalk.environmentType>SingleInstance</beanstalk.environmentType>
 
     </properties>
   
@@ -48,7 +70,146 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>package-jar</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <!-- This must be set as false so as to override the original jar file. -->
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <archive>
+                                <manifest>
+                                    <mainClass>${mainApplication}</mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>package-zip</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <descriptors>
+                                <descriptor>src/main/assembly/zip.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>br.com.ingenieux</groupId>
+                <artifactId>beanstalk-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>${mainApplication}</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>br.com.ingenieux</groupId>
+                    <artifactId>beanstalk-maven-plugin</artifactId>
+                    <inherited>true</inherited>
+                    <version>1.5.0</version>
+                    <configuration>
+                    	<!-- Uncomment for enabling and configuring auto-scaling via Elastic load-balancer
+                    	<optionSetting>
+							<namespace>aws:autoscaling:asg</namespace>
+							<optionName>MinSize</optionName>
+							<value>1</value>
+						</optionSetting>
+						<optionSetting>
+							<namespace>aws:autoscaling:asg</namespace>
+							<optionName>MaxSize</optionName>
+							<value>4</value>
+						</optionSetting>
+						<optionSetting>
+	                        <namespace>aws:autoscaling:trigger</namespace>
+	                        <optionName>MeasureName</optionName>
+	                        <value>MemoryUtilization</value>
+	                    </optionSetting>
+	                    <optionSetting>
+	                        <namespace>aws:autoscaling:trigger</namespace>
+	                        <optionName>Statistic</optionName>
+	                        <value>Maximum</value>
+	                    </optionSetting>
+	                    <optionSetting>
+	                        <namespace>aws:autoscaling:trigger</namespace>
+	                        <optionName>Unit</optionName>
+	                        <value>Percent</value>
+	                    </optionSetting>
+	                    <optionSetting>
+	                        <namespace>aws:autoscaling:trigger</namespace>
+	                        <optionName>UpperThreshold</optionName>
+	                        <value>90</value>
+	                    </optionSetting>
+	                    <optionSetting>
+	                        <namespace>aws:autoscaling:trigger</namespace>
+	                        <optionName>LowerThreshold</optionName>
+	                        <value>25</value>
+	                    </optionSetting>
+	                    <optionSetting>
+	                        <namespace>aws:autoscaling:trigger</namespace>
+	                        <optionName>MeasureName</optionName>
+	                        <value>CPUUtilization</value>
+	                    </optionSetting>
+	                    <optionSetting>
+	                        <namespace>aws:autoscaling:trigger</namespace>
+	                        <optionName>Statistic</optionName>
+	                        <value>Maximum</value>
+	                    </optionSetting>
+	                    <optionSetting>
+	                        <namespace>aws:autoscaling:trigger</namespace>
+	                        <optionName>Unit</optionName>
+	                        <value>Percent</value>
+	                    </optionSetting>
+	                    <optionSetting>
+	                        <namespace>aws:autoscaling:trigger</namespace>
+	                        <optionName>UpperThreshold</optionName>
+	                        <value>90</value>
+	                    </optionSetting>
+	                    <optionSetting>
+	                        <namespace>aws:autoscaling:trigger</namespace>
+	                        <optionName>LowerThreshold</optionName>
+	                        <value>25</value>
+	                    </optionSetting>
+	                    -->
+						<!-- 
+	          			<optionSetting>
+							<namespace>aws:elasticbeanstalk:application:environment</namespace>
+							<optionName>propName</optionName>
+							<value>propValue</value>
+						</optionSetting>
+						-->
+                    </configuration>
+                    
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -56,6 +217,39 @@
             </resource>
         </resources>
     </build>
+    
+    <profiles>
+        <profile>
+        	<!-- See for more details: https://java.awsblog.com/post/Tx32TLLUI5PY39/Deploying-Java-Applications-on-Elastic-Beanstalk-from-Maven -->
+            <id>awseb</id>
+            <properties>
+                <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
+                <beanstalk.versionLabel>${maven.build.timestamp}</beanstalk.versionLabel>
+                <maven.test.skip>true</maven.test.skip>
+                <maven.install.skip>true</maven.install.skip>
+                <maven.deploy.skip>true</maven.deploy.skip>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>br.com.ingenieux</groupId>
+                        <artifactId>beanstalk-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>deploy</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>upload-source-bundle</goal>
+                                    <goal>create-application-version</goal>
+                                    <goal>put-environment</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     
    	<dependencies>
    		<dependency>
@@ -77,12 +271,6 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
         </dependency>
 	</dependencies>
     
