--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   	<modelVersion>4.0.0</modelVersion>
   	<groupId>tr.com.serkanozal</groupId>
   	<artifactId>aws-tweet-crawler</artifactId>
-  	<version>1.0</version>
+  	<version>1.1</version>
   	<packaging>jar</packaging>
     <name>AWS Tweet Crawler</name>
     <url>https://github.com/serkan-ozal/aws-tweet-crawler</url>
@@ -264,7 +264,22 @@
 		</dependency>
 		<dependency>
 		    <groupId>com.amazonaws</groupId>
-		    <artifactId>aws-java-sdk</artifactId>
+		    <artifactId>aws-java-sdk-iam</artifactId>
+		    <version>${aws.sdk.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk-s3</artifactId>
+		    <version>${aws.sdk.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk-kinesis</artifactId>
+		    <version>${aws.sdk.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk-elasticsearch</artifactId>
 		    <version>${aws.sdk.version}</version>
 		</dependency>
 		<dependency>
